--- a/types.html
+++ b/types.html
@@ -92,48 +92,27 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-4 col-sm-6 col-12">
-                        <div class="type-card">
-                            <div class="bg-1">
-                                <a href="projects.html">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="type" id="">
-                                        <label class="form-check-label">
-                                            <img src="assets/img/icon-commercial.png" class="img-fluid">
-                                            <p>Commercial</p>
-                                        </label>
-                                    </div>
-                                </a>
-                            </div>
+                        <div class="type-card bg-1">
+                            <a href="projects.html">
+                                <img src="assets/img/icon-commercial.png" class="img-fluid">
+                                <p>Commercial</p>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-12">
-                        <div class="type-card">
-                            <div class="bg-2">
-                                <a href="projects.html">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="type" id="">
-                                        <label class="form-check-label">
-                                            <img src="assets/img/icon-managerial.png" class="img-fluid">
-                                            <p>Managerial</p>
-                                        </label>
-                                    </div>
-                                </a>
-                            </div>
+                        <div class="type-card bg-2">
+                            <a href="projects.html">
+                                <img src="assets/img/icon-managerial.png" class="img-fluid">
+                                <p>Managerial</p>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-12">
-                        <div class="type-card">
-                            <div class="bg-3">
-                                <a href="projects.html">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="type" id="">
-                                        <label class="form-check-label">
-                                            <img src="assets/img/icon-resedintal.png" class="img-fluid">
-                                            <p>Resedintal</p>
-                                        </label>
-                                    </div>
-                                </a>
-                            </div>
+                        <div class="type-card bg-3">
+                            <a href="projects.html">
+                                <img src="assets/img/icon-resedintal.png" class="img-fluid">
+                                <p>Resedintal</p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -143,19 +122,17 @@
 
 
 
-    <a href="chat.html"
-        class="float-message" target="_blank">
+    <a href="chat.html" class="float-message" target="_blank">
         <i class="fal fa-comments message"></i>
     </a>
-    <a href="https://wa.me/0100000"
-        class="float-whatsapp" target="_blank">
+    <a href="https://wa.me/0100000" class="float-whatsapp" target="_blank">
         <i class="fa fa-whatsapp whatsapp"></i>
     </a>
 
 
 
-    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -178,8 +155,8 @@
         </div>
     </div>
 
-    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -205,8 +182,8 @@
         </div>
     </div>
 
-    <div class="modal fade pop-up" id="fail-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="fail-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -224,8 +201,8 @@
     </div>
 
 
-    <div class="modal fade pop-up" id="success-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="success-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
