--- a/product.html
+++ b/product.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.9.3/venobox.css"
+        integrity="sha512-QNXKinXDUMic9CFhTKRcc6oVgQctTz1ctZ0enkJrPKwA2aOeYbXxBjDqneUMlor7kGPp+qzbyN6jQrMO+ZsGsA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta property="og:site_name" content="Hoper">
     <meta property="og:title" content="Hoper">
     <meta property="og:description" content="Hoper">
@@ -96,14 +99,22 @@
             <div class="container-fluid">
                 <div class="slides row w-90">
                     <div class="col-md-9">
-                        <img class="productSlides img-fluid main-img" src="assets/img/more-img.jpg"
-                            >
-                        <img class="productSlides img-fluid main-img" src="assets/img/search-3.jpg" style="display:none">
-                        <img class="productSlides img-fluid main-img" src="assets/img/more-img.jpg" style="display:none">
-                        <img class="productSlides img-fluid main-img" src="assets/img/more-img-2.jpg"
-                            style="display:none">
-                        <img class="productSlides img-fluid main-img" src="assets/img/product.jpg" style="display:none">
-                        <a href="#" class="fav">
+                        <a class="venobox" href="assets/img/more-img.jpg" data-gall="product-gallery">
+                            <img class="productSlides img-fluid main-img" src="assets/img/more-img.jpg">
+                        </a>
+                        <a class="venobox" href="assets/img/search-3.jpg" data-gall="product-gallery">
+                            <img class="productSlides img-fluid main-img" src="assets/img/search-3.jpg"
+                                style="display:none">
+                        </a>
+                        <a class="venobox" href="assets/img/product.jpg" data-gall="product-gallery">
+                            <img class="productSlides img-fluid main-img" src="assets/img/product.jpg"
+                                style="display:none">
+                        </a>
+                        <a class="venobox" href="assets/img/more-img-2.jpg" data-gall="product-gallery">
+                            <img class="productSlides img-fluid main-img" src="assets/img/more-img-2.jpg"
+                                style="display:none">
+                        </a>
+                        <a class="fav">
                             <i class="fal fa-heart" onclick="myFunction(this)"></i>
                         </a>
                     </div>
@@ -115,20 +126,22 @@
                             <img class="preview small-img" src="assets/img/search-3.jpg" onclick="currentDiv(2)">
                         </div>
                         <div>
-                            <img class="preview small-img" src="assets/img/more-img.jpg" onclick="currentDiv(3)">
+                            <img class="preview small-img" src="assets/img/product.jpg" onclick="currentDiv(3)">
                         </div>
                         <div>
                             <img class="preview small-img" src="assets/img/more-img-2.jpg" onclick="currentDiv(4)">
-                        </div>
-                        <div>
-                            <img class="preview small-img" src="assets/img/product.jpg" onclick="currentDiv(5)">
                         </div>
                     </div>
                 </div>
                 <div class="product-details w-90">
                     <div class="col-md-8">
                         <div class="product-header">
-                            <p class="project-price">500.000 LE</p>
+                            <div class="d-flex">
+                                <p class="project-price">500.000 LE</p>
+                                <span class="property-type rent">
+                                    Rent
+                                </span>
+                            </div>
                             <h5>New Capital City</h5>
                             <a href="city.html"><i class="fal fa-map-marker-alt" aria-hidden="true"></i> Appartment
                                 Location</a>
@@ -139,6 +152,31 @@
                                 class="fal fa-share-alt"></i> Share</a>
                     </div>
                 </div>
+
+                <div class="compound-floor w-90">
+                    <div class="compound">
+                        <a class="venobox" href="assets/img/compound.jpg" data-gall="compound-floor-gallery">
+                            <img class="img-fluid" src="assets/img/compound.jpg">
+                            <div class="black-label">
+                                <h5>
+                                    Compound Design
+                                </h5>
+                            </div>
+                        </a>
+                      
+                    </div>
+                    <div class="floor">
+                        <a class="venobox" href="assets/img/floor.png" data-gall="compound-floor-gallery">
+                            <img class="img-fluid" src="assets/img/floor.png">
+                            <div class="black-label">
+                                <h5>
+                                    Floor Plan
+                                </h5>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="more-details">
                     <div class="w-70 row">
                         <div class="col-md-4 col-sm-6 col-12">
@@ -289,6 +327,7 @@
                                                 <div class="services-text">
                                                     <i class="fal fa-medal"></i>
                                                     <p>Pool</p>
+                                                    <p>9.000</p>
                                                 </div>
                                             </div>
                                             <div class="services-card">
@@ -296,6 +335,7 @@
                                                 <div class="services-text">
                                                     <i class="fal fa-medal"></i>
                                                     <p>Grean Area</p>
+                                                    <p>11.000</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -334,9 +374,8 @@
                             </a>
                         </div>
 
-                        <div class="modal fade pop-up meeting-modal" id="meeting-modal" data-bs-backdrop="static"
-                            data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
-                            aria-hidden="true">
+                        <div class="modal fade pop-up meeting-modal" id="meeting-modal" data-bs-keyboard="false"
+                            tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -354,7 +393,6 @@
                             </div>
                         </div>
 
-
                         <div class="col-sm-4 col-6">
                             <a data-bs-toggle="modal" data-bs-target="#booking-modal">
                                 <div class="book-btn">
@@ -364,9 +402,8 @@
                             </a>
                         </div>
 
-                        <div class="modal fade pop-up" id="booking-modal" data-bs-backdrop="static"
-                            data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
-                            aria-hidden="true">
+                        <div class="modal fade pop-up" id="booking-modal" data-bs-keyboard="false" tabindex="-1"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -427,8 +464,8 @@
     </a>
 
 
-    <div class="modal fade pop-up" id="share-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="share-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -451,8 +488,8 @@
         </div>
     </div>
 
-    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Login-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -475,8 +512,8 @@
         </div>
     </div>
 
-    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade sign-in-modal" id="Code-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="left-side"></div>
@@ -502,8 +539,8 @@
         </div>
     </div>
 
-    <div class="modal fade pop-up" id="fail-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="fail-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -518,9 +555,8 @@
         </div>
     </div>
 
-
-    <div class="modal fade pop-up" id="success-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade pop-up" id="success-modal" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -612,6 +648,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.9.3/venobox.js"
+        integrity="sha512-58KxhG+wNkjwSa3ejC6PlVoQLjD5wxRxfpjB24/L7TXByQIEXE04/JKWeD17pTAOIERUMAnj7+3ff/L45ZNQlw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/js/fa-pro.js"></script>
     <script src="assets/js/main.js"></script>
     <!-- Swiper JS -->
